<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_app">Spotify Streamer</string>
    <string name="scores_app">Scores</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Bild It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="my_own_app">My Own App</string>

</resources>
