<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3f51b5">

    <TextView android:text="@string/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="15sp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="#fff"
         />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:background="#c5cae9"
        android:textColor="#eceff1"
        android:text="@string/spotify_streamer_app"
        android:id="@+id/btnSpotifyStreamer"
        android:onClick="onBtnClicked"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:textColor="#eceff1"
        android:background="#c5cae9"
        android:text="@string/scores_app"
        android:id="@+id/btnScores"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:textColor="#eceff1"
        android:background="#c5cae9"
        android:text="@string/library_app"
        android:id="@+id/btnLibraryApp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:textColor="#eceff1"
        android:background="#c5cae9"
        android:text="@string/build_it_bigger_app"
        android:id="@+id/btnBuildItBigger"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:textColor="#eceff1"
        android:background="#c5cae9"
        android:text="@string/xyz_reader_app"
        android:id="@+id/btnXYZReader"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:layout_marginBottom="5sp"
        android:textColor="#eceff1"
        android:background="#303f9f"
        android:text="@string/my_own_app"
        android:id="@+id/btnMyOwnApp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
